tests/ui/nightly/fail-wrong-yield-type-empty.stderr
error[E0308]: mismatched types
 --> tests/ui/nightly/fail-wrong-yield-type-empty.rs:5:5
  |
5 |     yield;
  |     ^^^^^
  |     |
  |     expected `i32`, found `()`
  |     arguments to this method are incorrect
  |
help: the return type of this call is `()` due to the type of the argument passed
   --> tests/ui/nightly/fail-wrong-yield-type-empty.rs:3:1
    |
3   | #[fauxgen::generator(yield = i32)]
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
4   | fn gen() {
5   |     yield;
    |     ----- this argument influences the return type of `yield_`
note: method defined here
   --> src/detail/token.rs
    |
    |     pub async fn yield_(self: Pin<&Self>, value: Y) -> A {
    |                  ^^^^^^
    = note: this error originates in the attribute macro `fauxgen::generator` (in Nightly builds, run with -Z macro-backtrace for more info)
